# Chatbot_V2.0

./: .dockerignore  .gitignore  README.md  dev.ps1  dev.sh  docker-compose.yaml
BE/: README.md  pyproject.toml  script.py
BE/apps/chats/: consumers.py  models.py  openrouter.py  serializers.py  services.py  urls.py  views.py
BE/apps/chats/migrations/: 0001_initial.py
BE/apps/users/: authentication.py  models.py  serializers.py  urls.py  views.py
BE/apps/users/migrations/: 0001_initial.py
BE/chatbot/: asgi.py  settings.py  urls.py
FE/: .gitignore  eslint.config.mts  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
FE/src/: index.css  main.tsx
FE/src/api/: axiosClient.ts
FE/src/app/: App.tsx  router.ts
FE/src/features/auth/components/: LoginForm.tsx
FE/src/features/auth/pages/: LogginPage.tsx
FE/src/features/chatbot/components/: Header.tsx
FE/src/features/chatbot/components/Chats/: Chat.tsx  Message.tsx  NewChat.tsx  Promptbox.tsx
FE/src/features/chatbot/components/SideBar/: ModelBadge.tsx  NewChatBtn.tsx  SideBar.tsx
FE/src/features/chatbot/components/SideBar/Account/: UserBadge.tsx
FE/src/features/chatbot/components/SideBar/History/: ChatHistory.tsx  ChatRecord.tsx
FE/src/features/chatbot/pages/: LoggedPage.tsx  UnloggedPage.tsx
FE/src/hooks/: useAuth.ts  useSocket.ts
FE/src/services/: auth.ts  chatbot.ts  loaders.ts
FE/src/store/: ActiveChatStore.ts  AuthStore.ts
FE/src/types/: auth.ts  chatbot.ts
FE/src/ui/: Loading.tsx  Spinner.tsx
